--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@
     <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
     
     <link rel="stylesheet" href="/public/style.css">
-    <script src="/public/highlight.min.js"></script>
+    <script src="/public/highlight.js"></script>
   </head>
   <body>
     <div class="wrapper">
